FEAT: Add JPMS module names for native access permission
Adds module-info.java to pipeline.common, pipeline.caching, pipeline.core, pipeline.engines and pipeline.engines.fiftyone so that callers can grant native access with --enable-native-access=fiftyone.pipeline.engines.fiftyone rather than ALL-UNNAMED.

The libraries target Java 8, which cannot compile a module declaration, so the descriptors are compiled at release 9 into META-INF/versions/9 of multi-release jars. The jars remain non-modular on Java 8 and a Java 8 build is unaffected.

Closes #476.