@@ -35,6 +35,81 @@ Packages can be found on Maven under the group [com.51degrees](https://mvnreposi
 
 Alternatively clone this git repository and in the root run `mvn install` to build and install the packages locally. 
 
+## Java modules and native library access
+
+`pipeline.engines.fiftyone` contains `LibLoader`, which calls `System.load` to load
+the native libraries used by the on-premise engines. `System.load` is a *restricted
+method*: recent JDKs warn when it is called without permission, and a future release
+will block it outright (see [JEP 472](https://openjdk.org/jeps/472)).
+
+```
+WARNING: A restricted method in java.lang.System has been called
+WARNING: java.lang.System::load has been called by fiftyone.pipeline.engines.fiftyone.flowelements.interop.LibLoader in an unnamed module
+WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
+WARNING: Restricted methods will be blocked in a future release unless native access is enabled
+```
+
+To let you grant that permission to 51Degrees code alone rather than to everything on
+the classpath, the packages below declare module names:
+
+| Package                   | Module name                          |
+|---------------------------|--------------------------------------|
+| pipeline.common           | `fiftyone.common`                    |
+| pipeline.caching          | `fiftyone.caching`                   |
+| pipeline.core             | `fiftyone.pipeline.core`             |
+| pipeline.engines          | `fiftyone.pipeline.engines`          |
+| pipeline.engines.fiftyone | `fiftyone.pipeline.engines.fiftyone` |
+
+### Granting native access
+
+Put the 51Degrees JARs on the **module path** and name the module that loads the
+native libraries:
+
+```bash
+java --module-path libs --enable-native-access=fiftyone.pipeline.engines.fiftyone -m your.app/com.example.Main
+```
+
+With the Maven exec plugin:
+
+```xml
+<configuration>
+    <arguments>
+        <argument>--enable-native-access=fiftyone.pipeline.engines.fiftyone</argument>
+        ...
+    </arguments>
+</configuration>
+```
+
+Module names only exist on the module path. If the 51Degrees JARs are on the
+**classpath** - which is still the default and remains fully supported - they are part
+of the unnamed module, and the only permission the JVM will accept is:
+
+```bash
+java -cp "libs/*" --enable-native-access=ALL-UNNAMED com.example.Main
+```
+
+Passing a module name while running from the classpath has no effect and reports
+`WARNING: Unknown module: fiftyone.pipeline.engines.fiftyone specified to --enable-native-access`.
+
+### Notes for module path users
+
+- The JARs are multi-release: the module descriptors live in `META-INF/versions/9`,
+  so the same artifacts still run on Java 8, where they are ordinary non-modular JARs.
+- Only these five packages are named. Downstream packages such as `device-detection`
+  and your own application do not need module declarations - unnamed modules can read
+  named ones.
+- `PipelineOptionsFactory` (XML/JSON pipeline configuration) uses JAXB, and the JAXB
+  implementation is not discoverable through `ServiceLoader` on the module path. Add it
+  to the module graph explicitly:
+
+```bash
+java --module-path libs --add-modules com.sun.xml.bind --enable-native-access=fiftyone.pipeline.engines.fiftyone -m your.app/com.example.Main
+```
+
+- `PipelineBuilder.buildFromConfiguration` finds element builders by scanning the
+  classpath. Builders supplied from the module path are not visible to that scan, so
+  configuration-driven pipelines should keep their element packages on the classpath.
+
 ## Tests
 
 Most packages contain tests which use junit and mockito. These tests can be run using maven by calling: `mvn test`
